# Synoptia-THERESE-CLI

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/therese/: __init__.py  agent.py  background.py  cli.py  commands.py  config.py  memory.py
src/therese/agents/: __init__.py  loader.py
src/therese/agents/builtin/: code-reviewer.yaml  debugger.yaml  planner.yaml
src/therese/checkpoints/: __init__.py  manager.py  storage.py
src/therese/http/: __init__.py  server.py
src/therese/mcp/: __init__.py  config.py  manager.py
src/therese/providers/: __init__.py  base.py  mistral.py  ollama.py
src/therese/sessions/: __init__.py  manager.py
src/therese/shell/: __init__.py  assistant.py  hooks.py
src/therese/tools/: __init__.py  base.py  bash.py  diff.py  edit.py  git.py  glob_tool.py  grep.py  project.py  read.py  subagent.py  task.py  tree.py  web.py  write.py
src/therese/ui/: __init__.py  app.py  theme.py
